--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@saberhq/eslint-config": "^2.0.4",
+    "@saberhq/tsconfig": "^2.0.4",
+    "@typechain/ethers-v5": "^10.1.0",
     "@types/bn.js": "^5.1.0",
     "@types/eslint": "^8.4.6",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@types/prettier": "^2.7.0",
+    "@yarnpkg/doctor": "^3.1.4",
     "eslint": "^8.22.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
+    "ethers": "^5.7.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
     "typescript": "4.7.4"
   },
   "dependencies": {
@@ -34,17 +39,11 @@
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
-    "@pinnata/pinnata-config": "^0.4.4",
-    "@saberhq/tsconfig": "^2.0.4",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@yarnpkg/doctor": "^3.1.4",
     "axios": "^0.27.2",
     "bn.js": "^5.2.1",
-    "ethers": "^5.7.0",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
-    "tiny-invariant": "^1.2.0",
-    "typechain": "^8.1.0"
+    "tiny-invariant": "^1.2.0"
   },
   "scripts": {
     "registry:sync": "ts-node src/fetch.ts",
